--- a/build.gradle
+++ b/build.gradle
@@ -13,10 +13,14 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.boot:spring-boot-starter:3.1.0'
+    implementation 'org.springframework.boot:spring-boot-starter-web:3.1.0'
+    implementation 'org.springframework.boot:spring-boot-starter-validation:3.0.4'
+    implementation 'org.hibernate:hibernate-core:6.2.1.Final'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.4'
+    implementation 'javax.persistence:javax.persistence-api:2.2'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.0'
+    runtimeOnly 'org.postgresql:postgresql:42.5.4'
 }
 
 tasks.named('test') {
