--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     implementation 'org.hibernate:hibernate-core:6.2.1.Final'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.4'
     implementation 'javax.persistence:javax.persistence-api:2.2'
+    implementation 'org.springframework.security:spring-security-crypto:'
     testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.0'
     runtimeOnly 'org.postgresql:postgresql:42.5.4'
 }
